--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
-    
+    <header>
+        <h1>HELLO</h1>
+    </header>
+
+
+    <script src="./assets/scripts.js"></script>
 </body>
+
 </html>
