add tailwind link; add bare bones html and simple button

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <form class="movieModal" action="">
+            <input type="text">
+            <button type="submit">Submit</button>
+        </form>
+    </main>
+    <footer></footer>
 </body>
 </html>
