--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
         <link rel="stylesheet" href="./assets/styles.css">
 
 </head>
 <body>
     <header></header>
     <main>
-        <form class="movieModal" action="">
-            <input type="text">
-            <button type="submit">Submit</button>
+        <form class="movieModal"  action="">
+            <input type="text" id="search-input">
+            <button type="submit" id=heroButton>Submit</button>
         </form>
     </main>
     <footer></footer>
+    <script src="./assets/scripts.js"></script>
 </body>
 
 </html>
