Added ids to input and submit so it connects to js

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header></header>
     <main>
         <form class="movieModal" action="">
-            <input type="text">
-            <button type="submit">Submit</button>
+            <input id="search-input" type="text">
+            <button id="heroButton" type="submit">Submit</button>
         </form>
     </main>
     <footer></footer>
