--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
 
 </head>
 <body>
@@ -15,12 +15,12 @@
     </header>
     <main>
         <form class="movieModal"  action="">
-            <input type="text" id="search-input">
-            <button type="submit" id=heroButton>Submit</button>
+            <!-- <input type="text" id="search-input"> -->
+            <button type="submit" id="heroButton">Let's get started</button>
         </form>
     </main>
     <footer></footer>
-    <script src="./assets/scripts.js"></script>
+    <script src="/assets/scripts.js"></script>
 </body>
 
 </html>
