--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="/assets/css/reset.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 
 </head>
 <body>
@@ -20,7 +21,7 @@
         </form>
     </main>
     <footer></footer>
-    <script src="/assets/scripts.js"></script>
+    <script src="/assets/css/scripts.js"></script>
 </body>
 
 </html>
