--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     </header>
     <main>
-        <form class="movieModal"  action="">
+        <!-- <form class="movieModal"  action=""> -->
             <!-- <input type="text" id="search-input"> -->
             <button type="submit" id="heroButton">Let's get started</button>
-        </form>
+        <!-- </form> -->
     </main>
     <footer></footer>
     <script src="/assets/css/scripts.js"></script>
