added hover button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Reset -->
     <link rel="stylesheet" href="/assets/css/reset.css">
 <!-- CSS -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 
 </head>
 <body>
@@ -18,6 +18,7 @@
 
     </header>
     <main>
+        <section id="Card">
 <!-- GET STARTED -->
             <button type="submit" id="heroButton">Let's get started</button>
 
@@ -56,7 +57,7 @@
               </div>
             </article>
           </section>
-          
+        </section>
     </main>
     <footer></footer>
 <!-- Bulma - Ext for accordian -->
