added hero in bulma

--- a/accordian.html
+++ b/accordian.html
@@ -9,6 +9,21 @@
 
 </head>
 <body>
-    
+    <!-- INITIAL SCREEN UPPON LOAD -->
+        <!-- Thinking we should do it on JS -->
+
+
+    <!-- HERO -->
+    <section class="hero is-large is-info">
+        <div class="hero-body">
+          <p class="title">
+           <!-- TEXT THROUGH JS  -->
+          </p>
+        </div>
+    </section>
+
+
+
+
 </body>
 </html>
