moved accordian to html

--- a/index.html
+++ b/index.html
@@ -21,41 +21,77 @@
 <!-- GET STARTED -->
             <button type="submit" id="heroButton">Let's get started</button>
 
-<!-- ACCORDIAN -->
-        <section class="accordions">
-            <article class="accordion is-active">
-              <div class="accordion-header toggle">
-                <p>Hello World</p>
-              </div>
-              <div class="accordion-body">
-                <div class="accordion-content">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-                </div>
-              </div>
-            </article>
-            <article class="accordion">
-              <div class="accordion-header">
-                <p>Hello World</p>
-                <button class="toggle" aria-label="toggle"></button>
-              </div>
-              <div class="accordion-body">
-                <div class="accordion-content">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-                </div>
-              </div>
-            </article>
-            <article class="accordion">
-              <div class="accordion-header">
-                <p>Hello World</p>
-                <button class="toggle" aria-label="toggle"></button>
-              </div>
-              <div class="accordion-body">
-                <div class="accordion-content">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-                </div>
-              </div>
-            </article>
-          </section>
+    <!-- INITIAL SCREEN UPPON LOAD -->
+        <!-- Thinking we should do it on JS -->
+
+
+    <!-- HERO -->
+    <section class="hero is-large is-info">
+      <div class="hero-body">
+      <p class="title">
+      <!-- TEXT THROUGH JS  -->
+      </p>
+      </div>
+  </section>
+
+
+<!-- TILES -->
+<!-- First Row  -->
+  <div class="tile is-ancestor">
+      <div class="tile is-parent">
+      <article class="tile is-child box">
+          <p class="title">One</p>
+          <p class="subtitle">Subtitle</p>
+      </article>
+      </div>
+      <div class="tile is-parent">
+      <article class="tile is-child box">
+          <p class="title">Two</p>
+          <p class="subtitle">Subtitle</p>
+      </article>
+      </div>
+      <div class="tile is-parent">
+      <article class="tile is-child box">
+          <p class="title">Three</p>
+          <p class="subtitle">Subtitle</p>
+      </article>
+      </div>
+      <div class="tile is-parent">
+      <article class="tile is-child box">
+          <p class="title">Four</p>
+          <p class="subtitle">Subtitle</p>
+      </article>
+      </div>
+  </div>
+
+<!-- Second Row -->
+  <div class="tile is-ancestor">
+      <div class="tile is-parent">
+      <article class="tile is-child box">
+          <p class="title">One</p>
+          <p class="subtitle">Subtitle</p>
+      </article>
+      </div>
+      <div class="tile is-parent">
+      <article class="tile is-child box">
+          <p class="title">Two</p>
+          <p class="subtitle">Subtitle</p>
+      </article>
+      </div>
+      <div class="tile is-parent">
+      <article class="tile is-child box">
+          <p class="title">Three</p>
+          <p class="subtitle">Subtitle</p>
+      </article>
+      </div>
+      <div class="tile is-parent">
+      <article class="tile is-child box">
+          <p class="title">Four</p>
+          <p class="subtitle">Subtitle</p>
+      </article>
+      </div>
+  </div>
+
           
     </main>
     <footer></footer>
