put back khaled's code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- INITIAL SCREEN UPPON LOAD -->
     <!-- Thinking we should do it on JS -->
     
+    <!-- ADD KHALED'S CODE HERE -->
     
     <!-- HERO -->
     <section class="hero is-large is-info">
