--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <main>
         <section id="Card">
 <!-- GET STARTED -->
-            <button type="submit" id="heroButton">Let's get started</button>
 
+            <button type="submit" id="heroButton"onclick="playAudio1()">Let's get started
+            <audio  id="playAudio1" controls>
+              <source src="../Mix-up-Movie-Night/assets/freejazz.wav" type="audio/ogg">
+            </audio>
+          </button>
 <!-- ACCORDIAN -->
         <section class="accordions">
             <article class="accordion is-active">
@@ -44,7 +48,10 @@
             <article class="accordion">
               <div class="accordion-header">
                 <p>Hello World</p>
-                <button class="toggle" aria-label="toggle"></button>
+                <button class="toggle" aria-label="toggle"id ="playAudio2"onclick="playAudio2()">
+                  <audio  id="playAudio2" controls>
+                    <source src="../Mix-up-Movie-Night/assets/Post Malone - Congratulations ft. Quavo-region-000.wav" type="audio/ogg">
+                  </audio></button>
               </div>
               <div class="accordion-body">
                 <div class="accordion-content">
@@ -55,7 +62,11 @@
             <article class="accordion">
               <div class="accordion-header">
                 <p>Hello World</p>
-                <button class="toggle" aria-label="toggle"></button>
+                <button class="toggle" aria-label="toggle"id ="playAudio3"onclick="playAudio3()">
+                  <audio  id="playAudio3" controls>
+                    <source src="../Mix-up-Movie-Night/assets/freejazz.wav" type="audio/ogg">
+                  </audio>
+                </button>
               </div>
               <div class="accordion-body">
                 <div class="accordion-content">
@@ -71,6 +82,7 @@
     <!-- <script type="text/javascript" src="/node_modules/bulma-accordion/dist/js/bulma-accordion.min.js"></script> -->
 <!-- script.js -->
     <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/mp3.js"></script>
 </body>
 
 </html>
