add google fonts link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <!-- Bulma -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <!-- Reset -->
@@ -15,7 +19,8 @@
 </head>
 <body>
   <header>
-    
+    <p>About the Project</p>
+    <p>About the Contributors</p>
   </header>
   <main>
     <!-- INITIAL SCREEN UPPON LOAD -->
@@ -42,7 +47,7 @@
       </button>
 
 
-      
+
     <!-- HERO -->
     <section class="hero is-large is-info">
       <div class="hero-body">
