added background color through Bulma

--- a/index.html
+++ b/index.html
@@ -40,16 +40,21 @@
         <source src="../Mix-up-Movie-Night/assets/Post Malone - Congratulations ft. Quavo-region-000.wav" type="audio/ogg">
       </audio></button>
 
-      <button class="toggle" aria-label="toggle"id ="playAudio3"onclick="playAudio3()">
+      <button 
+      class="toggle" aria-label="toggle"
+      id ="playAudio3"
+      onclick="playAudio3()">
+
         <audio  id="playAudio3" controls>
           <source src="../Mix-up-Movie-Night/assets/freejazz.wav" type="audio/ogg">
         </audio>
+
       </button>
 
 
 
     <!-- HERO -->
-    <section class="hero is-large is-info">
+    <section class="hero is-large has-background-grey-dark">
       <div class="hero-body">
         <p class="title">
           <!-- TEXT THROUGH JS  -->
@@ -60,7 +65,7 @@
     
     <!-- TILES -->
     <!-- First Row  -->
-    <div class="tile is-ancestor">
+    <div class="tile is-ancestor has-background-black-ter">
       <div class="tile is-parent">
         <article class="tile is-child box">
           <p class="title">One</p>
@@ -88,7 +93,7 @@
     </div>
     
     <!-- Second Row -->
-    <div class="tile is-ancestor">
+    <div class="tile is-ancestor has-background-black-ter">
       <div class="tile is-parent">
         <article class="tile is-child box">
           <p class="title">One</p>
