--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     
   </main>
   <!-- script.js -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="assets/js/scripts.js"></script>
   <script src="assets/js/mp3.js"></script>
 </body>
