Getting user click on genre choice and randomizing

--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
       <!-- R1 C1 -->
       <div class="tile is-parent">
         <article class="tile is-child box">
-          <p class="title">One</p>
+          <p class="title">Action</p>
           <p class="subtitle">Subtitle</p>
         </article>
       </div>
       <!-- R1C2 -->
       <div class="tile is-parent">
         <article class="tile is-child box">
-          <p class="title">Two</p>
+          <p class="title">Adventure</p>
           <p class="subtitle">Subtitle</p>
         </article>
       </div>
       <!-- R1C3 -->
       <div class="tile is-parent">
         <article class="tile is-child box">
-          <p class="title">Three</p>
+          <p class="title">Animation</p>
           <p class="subtitle">Subtitle</p>
         </article>
       </div>
       <!-- R1C4 -->
       <div class="tile is-parent">
         <article class="tile is-child box">
-          <p class="title">Four</p>
+          <p class="title">Biography</p>
           <p class="subtitle">Subtitle</p>
         </article>
       </div>
@@ -102,28 +102,28 @@
       <!-- R2C1 -->
       <div class="tile is-parent">
         <article class="tile is-child box">
-          <p class="title">One</p>
+          <p class="title">Comedy</p>
           <p class="subtitle">Subtitle</p>
         </article>
       </div>
       <!-- R2C2 -->
       <div class="tile is-parent">
         <article class="tile is-child box">
-          <p class="title">Two</p>
+          <p class="title">Crime</p>
           <p class="subtitle">Subtitle</p>
         </article>
       </div>
       <!-- R2C3 -->
       <div class="tile is-parent">
         <article class="tile is-child box">
-          <p class="title">Three</p>
+          <p class="title">Documentary</p>
           <p class="subtitle">Subtitle</p>
         </article>
       </div>
       <!-- R2C4 -->
       <div class="tile is-parent">
         <article class="tile is-child box">
-          <p class="title">Four</p>
+          <p class="title">Drama</p>
           <p class="subtitle">Subtitle</p>
         </article>
       </div>
