add class names to onload H1 to talk to css and js

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
   <main>
     <!-- INITIAL SCREEN UPPON LOAD -->
-    <div class="welcome-banner">
+    <div class="transition-el is-active">
       <h1>Ready to plan your movie weekend?</h1>
     </div>
     
 
     <!-- ADD KHALED'S CODE HERE -->
 
-    <button type="submit" id="heroButton"onclick="playAudio1()">Let's get started
+    <!-- <button type="submit" id="heroButton"onclick="playAudio1()">Let's get started
       <audio  id="playAudio1" controls>
         <source src="../Mix-up-Movie-Night/assets/freejazz.wav" type="audio/ogg">
       </audio>
@@ -38,9 +38,9 @@
       <audio  id="playAudio3" controls>
         <source src="../Mix-up-Movie-Night/assets/freejazz.wav" type="audio/ogg">
       </audio>
-    </button>
+    </button> -->
 
-    
+
 
     <!-- WEB APP -->
     <div class="web-app">
