added combined titles, separated lists, added quick descriptions

--- a/index.html
+++ b/index.html
@@ -82,29 +82,50 @@
         <!-- R1 C1 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">Action</p>
-            <p class="subtitle">Subtitle</p>
+            <p class="title">Action/Adventure</p>
+            <p class="subtitle">Boom! Bam! Pow!</p>
           </article>
         </div>
         <!-- R1C2 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">Adventure</p>
-            <p class="subtitle">Subtitle</p>
+            <p class="title">Animation</p>
+            <p class="subtitle">Moving pictures are all the rage</p>
           </article>
         </div>
         <!-- R1C3 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">Animation</p>
-            <p class="subtitle">Subtitle</p>
+            <p class="title">Comedy</p>
+            <p class="subtitle">Laugh it up</p>
           </article>
         </div>
         <!-- R1C4 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">Biography</p>
-            <p class="subtitle">Subtitle</p>
+            <p class="title">Horror/Mystery</p>
+            <p class="subtitle">The scenes are fake but the fear is real</p>
+          </article>
+        </div>
+        <!-- R1C5 -->
+        <div class="tile is-parent">
+          <article class="tile is-child box">
+            <p class="title">Fantasy/SciFi</p>
+            <p class="subtitle">The past, present, and future... But different</p>
+          </article>
+        </div>
+        <!-- R1C6 -->
+        <div class="tile is-parent">
+          <article class="tile is-child box">
+            <p class="title">Musical</p>
+            <p class="subtitle">Jazz up your life, get some pep in your step</p>
+          </article>
+        </div>
+        <!-- R1C7 -->
+        <div class="tile is-parent">
+          <article class="tile is-child box">
+            <p class="title">Sports</p>
+            <p class="subtitle">Get your head in the game</p>
           </article>
         </div>
       </div>
@@ -114,29 +135,22 @@
         <!-- R2C1 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">Comedy</p>
-            <p class="subtitle">Subtitle</p>
+            <p class="title">Fancy Drinks</p>
+            <p class="subtitle">The kind of drinks you would order at a bar</p>
           </article>
         </div>
         <!-- R2C2 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">Crime</p>
-            <p class="subtitle">Subtitle</p>
+            <p class="title">Common Drinks</p>
+            <p class="subtitle">No need to be fancy when the classics work just fine</p>
           </article>
         </div>
         <!-- R2C3 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">Documentary</p>
-            <p class="subtitle">Subtitle</p>
-          </article>
-        </div>
-        <!-- R2C4 -->
-        <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="title">Drama</p>
-            <p class="subtitle">Subtitle</p>
+            <p class="title">Non-Alcoholic Drinks</p>
+            <p class="subtitle">No alcohol doesn't mean no fun</p>
           </article>
         </div>
       </div>
