append Movie poster

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <!-- HERO -->
       <section class="hero is-large has-background-grey-dark">
-        <div class="hero-body">
+        <div class="hero-body" id="hero1">
           <p class="title">
             <!-- TEXT THROUGH JS  -->
           </p>
