added audio buttons with according sounds/ hidding in CSS

--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
       <!-- Thinking we should do it on JS -->
 
       <!-- KHALED'S BUTTON CODE -->
-      <audio id="playAudio1" controls>
-        <source
-          src="../Mix-up-Movie-Night/assets/freejazz.wav"
-          type="audio/ogg"
-        />
-      </audio>
+      <button
+        class="toggle"
+        aria-label="toggle"
+        id="playAudio1"
+        onclick= "playAudio1()"
+      >
+       Play Audio 1
+      </button>
 
       <button
         class="toggle"
@@ -45,26 +47,16 @@
         id="playAudio2"
         onclick="playAudio2()"
       >
-        <audio id="playAudio2" controls>
-          <source
-            src="../Mix-up-Movie-Night/assets/Post Malone - Congratulations ft. Quavo-region-000.wav"
-            type="audio/ogg"
-          />
-        </audio>
+      Play Audio 2
       </button>
 
       <button
         class="toggle"
         aria-label="toggle"
         id="playAudio3"
-        onclick="playAudio3()"
+        onclick= "playAudio3()"
       >
-        <audio id="playAudio3" controls>
-          <source
-            src="../Mix-up-Movie-Night/assets/freejazz.wav"
-            type="audio/ogg"
-          />
-        </audio>
+       Play Audio 3
       </button>
 
       <!-- HERO -->
