made submit button to save pair

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <!-- TEXT THROUGH JS  -->
           </p>
         </div>
+        <button class="saveForLater">Submit</button>
       </section>
 
       <!-- TILES -->
