--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   </head>
   <body>
     <header>
-      <p>About the Project</p>
-      <p>About the Contributors</p>
+      <h1>Mix-up Movie Night!</h1>
     </header>
     <main>
       <!-- INITIAL SCREEN UPPON LOAD -->
