--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             <!-- TEXT THROUGH JS  -->
           </p>
         </div>
-        <button class="saveForLater">Submit</button>
+        <div class="buttons">
+        <button class="saveForLater" id="saveBtn">Save Your Pair</button>
+        <button class="saveForLater" id="loadBtn">Load Previous Save</button>  
+        </div>
       </section>
 
       <!-- TILES -->
