--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <h1>Mix-up Movie Night!</h1>
     </header>
     <main>
+      <!-- Welcome Banner -->
+      <div class="transition-el is-active">
+        <h1>Let's plan your next movie night</h1>
+      </div>
       <!-- INITIAL SCREEN UPPON LOAD -->
       <!-- Thinking we should do it on JS -->
 
