deleted p tag and commented out hero1; added separate divs for movie and drink

--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
 
       <!-- HERO -->
       <section class="hero is-large has-background-grey-dark">
-        <div class="hero-body" id="hero1">
-          <p class="title">
-            <!-- TEXT THROUGH JS  -->
-          </p>
+        <!-- <div class="hero-body" id="hero1">
+        </div> --> 
+        <div class="movieDiv">
+          <h2></h2>
         </div>
+        <div class="drinkDiv">
+          <h2></h2>
+        </div>
+
         <button class="saveForLater">Submit</button>
+
       </section>
 
       <!-- TILES -->
