--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </button>
 
       <!-- HERO -->
-      <section class="hero is-large has-background-grey-dark">
+      <section class="hero is-large has-background-grey-dark displayWindow">
         <!-- <div class="hero-body" id="hero1">
         </div> --> 
         <div class="movieDiv">
