add appropriate text for submit button

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h2></h2>
         </div>
 
-        <button class="saveForLater">Submit</button>
+        <button class="saveForLater">Save Your Pairing</button>
 
       </section>
 
