added p within button to center text (wasn't centering in css before)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
           <h2></h2>
         </div>
 
-        <button class="saveForLater">Save Your Pairing</button>
+        <button class="saveForLater">
+          <p>Save Your Pairing</p>
+        </button>
 
       </section>
 
