remove color value on bulma hero

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </button>
 
       <!-- HERO -->
-      <section class="hero is-large has-background-grey-dark">
+      <section class="hero is-large">
         <div class="hero-body" id="hero1">
           <p class="title">
             <!-- TEXT THROUGH JS  -->
