remove color values from bulma tile ancestors

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <!-- TILES -->
       <!-- First Row  -->
-      <div class="tile tile-box is-ancestor has-background-black-ter">
+      <div class="tile tile-box is-ancestor">
         <!-- R1 C1 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
@@ -124,7 +124,7 @@
 
       <!-- Second Row -->
       
-      <div class="tile tile-box is-ancestor has-background-black-ter">
+      <div class="tile tile-box is-ancestor">
         <!-- R2 C1 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
