git choice rows an extra class for styling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
       <!-- TILES -->
       <!-- First Row  -->
-      <div class="tile tile-box is-ancestor">
+      <div class="tile tile-box is-ancestor optionRow">
+        <h2>Movie Genres</h2>
         <!-- R1 C1 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
@@ -124,7 +125,8 @@
 
       <!-- Second Row -->
       
-      <div class="tile tile-box is-ancestor">
+      <div class="tile tile-box is-ancestor optionRow">
+        <h2>Drink Choices</h2>
         <!-- R2 C1 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
