put choice titles in a div to have it sit above the choice row/tiles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       </section>
 
       <!-- TILES -->
-      <h2>Movie Genres</h2>
+      <div>
+        <h2>Movie Genres</h2>
+      </div>
 
       <!-- First Row  -->
       <div class="tile tile-box is-ancestor optionRow">
@@ -125,7 +127,9 @@
       </div>
 
       <!-- Second Row -->
-      <h2>Drink Choices</h2>
+      <div>
+        <h2>Drink Choices</h2>
+      </div>
 
       <div class="tile tile-box is-ancestor optionRow">
         <!-- R2 C1 -->
