--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <!-- First Row  -->
-      <div class="tile tile-box is-ancestor optionRow">
+      <div class="tile tile-box is-ancestor">
         <!-- R1 C1 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
@@ -131,7 +131,7 @@
         <h2>Drink Choices</h2>
       </div>
 
-      <div class="tile tile-box is-ancestor optionRow">
+      <div class="tile tile-box is-ancestor">
         <!-- R2 C1 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
