added respective divs for choices randomed

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
       
       <section class="hero is-large">
         <div class="hero-body" id="hero1">
-          <p class="title">
-            <!-- TEXT THROUGH JS  -->
-          </p>
+          <div class="movieDiv">
+            <h2 class="movieDivTitle"></h2>
+          </div>
+          <div class="drinkDiv">
+            <h2 class="drinkDivTitle"></h2>
+          </div>
+        </div>
 
-        </div>
-        <div class="drinkDiv">
-          <h2></h2>
-        </div>
 
         <button class="saveForLater">
           <p>Save Your Pairing</p>
