added individual divs

--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
       <!-- HERO -->
       
       <section class="hero is-large">
-        <div class="hero-body" id="hero1">
+        <div id="hero1">
           <div class="movieDiv">
             <h2 class="movieDivTitle"></h2>
+            <img src="" alt="" class="movieDivImg">
           </div>
           <div class="drinkDiv">
             <h2 class="drinkDivTitle"></h2>
+            <img src="" alt="" class="drinkDivImg">
           </div>
         </div>
 
