edited to have individual divs in html, styling for each in css, and simplified js to display the information

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           <div class="movieDiv">
             <h2 class="movieDivTitle"></h2>
             <img src="" alt="" class="movieDivImg">
+            <p class="movieDivDescription"></p>
           </div>
           <div class="drinkDiv">
             <h2 class="drinkDivTitle"></h2>
