added styling for images

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             <!-- TEXT THROUGH JS  -->
           </p>
         </div>
+        <div class="drinkDiv">
+          <h2></h2>
+        </div>
         <button class="saveForLater">Submit</button>
       </section>
 
