replaced musical with drama in html; commented out musical in js

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         <!-- R1C6 -->
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">Musical</p>
-            <p class="subtitle">Jazz up your life, get some pep in your step</p>
+            <p class="title">Drama</p>
+            <p class="subtitle">It's always better to watch someone else's drama</p>
           </article>
         </div>
         <!-- R1C7 -->
