--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </header>
     <main>
       <!-- Welcome Banner -->
-      <div class="transition-el is-active">
+      <!-- <div class="transition-el is-active">
         <h1>Let's plan your next movie night</h1>
-      </div>
+      </div> -->
       <!-- INITIAL SCREEN UPPON LOAD -->
       <!-- Thinking we should do it on JS -->
 
