added a simple button for testing movie search, going to reach for movie pages in API (WIP)

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
           <p>Save Your Pairing</p>
         </button>
 
+        <button id="testBtn">
+          Hello this is a test Button
+        </button>
+
       </section>
 
       <!-- TILES -->
