forgot to add button text value

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </button>
 
         <button id="testBtn">
-          Hello this is a test Button
+          Spirited Away
         </button>
 
       </section>
